align txt left and fix container css

--- a/styles/CardDetails.css
+++ b/styles/CardDetails.css
@@ -15,10 +15,8 @@
     flex-direction: row;
     justify-content: center;
     position: relative;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
     flex-wrap: wrap;
+    flex: 1 1;
 }
 
 .cardItem {
@@ -205,6 +203,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    text-align: left;
 }
 
 .accordionDropdownConfirm {
